@@ -58,7 +58,8 @@ Changes log
  - Added "throwable" property to the Status class, respecting the immutability. Suggested by Paul J. Lucas.
  - Added "getEphemeralPort()" method on Server to get the local port actually used by the system when the
    "port" property is set to '0'. Suggested by William Pietri. 
- - Made the inner Template.VariableResolver class protected. Suggested by Stephan Koops.
+ - Made the inner Template.VariableResolver interface and "format(VariableResolver)" method protected. 
+   Suggested by Stephan Koops for the JAX-RS extension.
   
 [Misc]
  - Added Engine.copyResponseHeaders() method. Contributed by Stephan Koops.
